--- a/practice/002-core-tag/index.html
+++ b/practice/002-core-tag/index.html
@@ -25,8 +25,13 @@
     
 <div class="行 主体">
     <div class="列 卡片">
-        <div class="缩略图"></div>
-        <div class="文字"></div>
+        <div class="缩略图">
+            <img>
+        </div>
+        <div class="文字">
+            <div class="标题"></div>
+            <div class="描述"></div>
+        </div>
     </div>
     <div class="列 卡片"></div>
     <div class="列 卡片"></div>
@@ -34,8 +39,13 @@
 </div>
 <div class="行 页脚">
     <div class="列 链接总组">
-        <div class="组标题"></div>
-        <div class="链接组"></div>
+        <div class="组标题">了解产品</div>
+        <div class="链接组">
+            <a href="#">item</a>
+            <a href="#">item</a>
+            <a href="#">item</a>
+            <a href="#">item</a>
+        </div>
     </div>   
     <!-- 5 more -->
 </div>
