自己完成小牛电动第四级结构

--- a/practice/002-core-tag/index.html
+++ b/practice/002-core-tag/index.html
@@ -1,15 +1,13 @@
-<div class="行 导航 全局">
-    <div class="列 链接组 左">
-        <a href="#">LOGO</a>
-        <!-- a=anchor -->
-        <a href="#">item</a>
-        <a href="#">item</a>
-        <a href="#">item</a>
-        <a href="#">item</a>
+<div class="行 导航">
+    <div class="链接组左">
+        <a href="#">链接</a>
+        <a href="#">链接</a>
+        <a href="#">链接</a>
+        <a href="#">链接</a>
     </div>
-    <div class="列 链接组 右">
-        <a href="#">item</a>
-        <a href="#">item</a>
+    <div class="链接组右">
+        <a href="#">链接</a>
+        <a href="#">链接</a>
     </div>
 </div>
 <div class="行 首屏">
@@ -17,12 +15,11 @@
         <div class="轮播">
             <img>
         </div>
-         <div class="轮播">
+        <div class="轮播">
             <img>
         </div>
     </div>
 </div>
-    
 <div class="行 主体">
     <div class="列 卡片">
         <div class="缩略图">
@@ -39,13 +36,13 @@
 </div>
 <div class="行 页脚">
     <div class="列 链接总组">
-        <div class="组标题">了解产品</div>
+        <div class="组标题"></div>
         <div class="链接组">
             <a href="#">item</a>
             <a href="#">item</a>
             <a href="#">item</a>
             <a href="#">item</a>
         </div>
-    </div>   
-    <!-- 5 more -->
+    </div>
+    <!-- 5more -->
 </div>
