--- a/practice/002-core-tag/mi.com.html
+++ b/practice/002-core-tag/mi.com.html
@@ -1,57 +1,92 @@
 <div class="行 导航 全局">
-    <div class="列 左">
+    <div class="列 链接组 左">
         <a href="#">item</a>
-        <a href="#">item</a>
-        <a href="#">item</a>
-        <a href="#">item</a>
+        <!-- 7-more -->
     </div>
-    <div class="列 右">
+    <div class="列 链接组 右">
         <a href="#">item</a>
-        <a href="#">item</a>
-        <a href="#">item</a>
-        <a href="#">item</a>        
+        <!-- 2-more -->
+        <input>
+        <button>
+            <img>
+        </button>
     </div>
 </div>
 <div class="行 首屏">
-    <div class="行 导航 页面">
-        <div class="列 logo"></div>
-        <div class="列 链接组"></div>
-        <div class="列 促销"></div>
+    <div class="行 首屏头">
+        <div class="logo区">
+            <div class="logo"><img ></div>
+            <div class="gif"><img ></div>
+        </div>
+        <div class="链接组区">
+            <a href="#"></a>
+            <!-- 9-more -->
+        </div>
+        <div class="搜索区">
+            <input >
+            <button ></button>
+        </div>
     </div>
-    <div class="行 主促销">
-        <div class="列 类目"></div>
-        <div class="列 轮播"></div>
+    <div class="行 首屏体">
+        <div class="列 左">
+            <a href="#"></a>
+            <!--n-more -->
+        </div>
+        <div class="列 右">
+            <img>
+            <!--n-more -->
+        </div>
     </div>
-    <div class="行 促销卡片组">
-        <div class="列 快速通道"></div>
-        <div class="列 卡片"></div>
+    <div class="行 首屏脚">
+        <div class="列 左">
+            <div class="行*2">
+                <div class="列*3">
+                    <span class="图标"><img></span>
+                    <span class="文字">item</span>
+                </div>
+            </div>
+        </div>
+        <div class="列 右">
+            <div class="卡片组*3">
+                <span class="图片"><img></span>
+                <span class="图片"><img></span>
+                <span class="图片"><img></span>
+            </div>
+        </div>
     </div>
 </div>
 <div class="行 主体">
-    <div class="分类促销">
-        <div class="行 标题区"></div>
-        <div class="行 卡片组"></div>
-    </div>
-    <div class="热评区">
-        <div class="列 卡片">
-            <div class="文字"></div>
-            <div class="图片"></div>
+    <div class="行 主体头">
+        <div class="列 左">
+            <span>item</span>
+        </div>
+        <div class="列 右">
+            <span>item</span>
+            <span><img ></span>
         </div>
     </div>
-    <div class="主题区">
-        <div class="列 卡片">
-            <div class="文字"></div>
-            <div class="图片"></div>
+    <div class="行 主体体">
+        <div class="领队 左">
+            <img>
+        </div>
+        <div class="卡片组 右">
+            <div class="行 *2">
+                <div class="列*3">
+                    <span>图片</span>
+                    <span>文字</span>
+                    <span>描述</span>
+                </div>
+            </div>
         </div>
     </div>
-</div>
-<div class="行 页脚">
-    <div class="行 售后">
-        <div class="列 售后项目"></div>
+    <div class="行 主体脚">
+        <div class="广告图片">
+            <img>
+        </div>
     </div>
-    <div class="行 其他">
-        <div class="列 售后项目"></div>
-        <div class="列 售后项目"></div>
+    <div class="热评产品">
+        <div class="标题区"></div>
+        <div class="卡片区"></div>
     </div>
-    <div class="行 元信息"></div>
 </div>
+<div class="行 页脚"></div>
