自己完成天猫html

--- a/practice/002-core-tag/test.html
+++ b/practice/002-core-tag/test.html
@@ -1,92 +1,70 @@
-行 导航 全局
+行 导航
     列 链接组 左
-        链接*n 
+        欢迎语
+        链接*n
     列 链接组 右
-        链接*3
-        图片 购物车
-            链接
+        链接*n 
 行 首屏
-    行 导航 主页
-        列 链接组 左
-            logo区
+    行 首屏头
+        行 上
+            列 logo区
                 logo 
-                gif
+            列 搜索框
+                行 上
+                    搜索框
+                    按钮
+                行 下
+                    链接组
+            列 空白待用
+        行 下
             链接组
-                链接
-        列 搜索区 右
-            搜索框
-            按钮
     行 首屏体
-        列 轮播目录
-            链接 *n
+        列 类目
+            链接*n
         列 轮播图
             图片
     行 首屏脚
-        列 分类 左
-            行*2
-                列 卡片组*3
-                    图标
-                    文字                    
-        列 卡片组 右
-            行
-                列 卡片组*3
+        行 上
+            列 卡片组*3
+                行 标题区
+                行 内容区
+        行 下
+            行 *3
+                列*n
                     图片
 行 主体
-    行 主体头
+    行 标题区
         列 左
-            文字
+            图片
         列 右
-            文字
-            按钮
-    行 主体体
-        列 左
-            领队
-        列 右
-            行*2
-                列 卡片组*4
-                    缩略图
-                    文字  
-    行 主体脚
-        图片 广告
-    行 热评产品
-        标题区
-            列 左
-            列 右
+            链接组
+                链接
     行 内容区
-        卡片组*4
-           缩略图
-           文字 
-           行 主题区
-           列 卡片 * 4
-             所属分类
-             标题
-             描述
-             价格
-             缩略图
-             翻页按钮组
-               按钮          
+        列 领队
+            图片
+        列 内容
+            行 *2
+                列 *n
+    行 猜你喜欢分区
+        行 *n 
+            列 *n 
+                图片            
 行 页脚
-    行 售后服务
-        列 链接组 *5
-    行 其他服务
-        列 链接总组
-            列 链接组
-                标题区
-                链接区
-        列 客服电话
-            行*3
-                文字
-                描述
-                按钮
-    行 元信息
-        列 总链接组
-            列 LOGO
-                图片
-            列 链接组
-                行
-                    链接 * n
-                行
-                    链接 * n
-        列 认证
-            链接 * n
-                 图片
+    行 页脚头
+        行
+            列*4
+    行 页脚体
+        列 *4
+            标题区
+            具体链接区
+        图片二维码    
+    行 页脚脚
+        行*4
+            列1 
+                链接组
+            列2
+                链接组
+            列3
+                链接组
+            列4 
+                链接组
