自己完链家html

--- a/practice/002-core-tag/lianjia.com.html
+++ b/practice/002-core-tag/lianjia.com.html
@@ -61,7 +61,10 @@
     </div>
 </div>
 <div class="主体">
-    <div class="标题区"></div>
+    <div class="标题区">
+        <div class="列 左"></div>
+        <div class="列 右"></div>
+    </div>
     <div class="内容区">
         <div class="卡片总组">
             <div class="卡片组">
