--- a/practice/002-core-tag/mi.com.html
+++ b/practice/002-core-tag/mi.com.html
@@ -1,92 +1,54 @@
-<div class="行 导航 全局">
-    <div class="列 链接组 左">
-        <a href="#">item</a>
-        <!-- 7-more -->
+<div class="导航 全局">
+    <div class="链接总组 左">
+        <a href="#"></a>
+        <!-- n more -->
     </div>
-    <div class="列 链接组 右">
-        <a href="#">item</a>
-        <!-- 2-more -->
-        <input>
-        <button>
-            <img>
-        </button>
+    <div class="链接总组 右">
+        <div class="链接组">
+            <a href="#"></a>
+            <!-- n more -->
+        </div>
+        <div class="按钮区">
+            <button>
+                <a href="#"></a>
+            </button>
+        </div>
     </div>
 </div>
-<div class="行 首屏">
-    <div class="行 首屏头">
-        <div class="logo区">
-            <div class="logo"><img ></div>
-            <div class="gif"><img ></div>
+<div class="首屏">
+    <div class="首屏头">
+        <div class="链接组 左">
+            <div class="logo区">
+                <div class="logo">
+                    <img >
+                </div>
+                <div class="gif动图">
+                    <img >
+                </div>
+            </div>
+            <div class="链接区">
+                <a href="#"></a>
+                <!-- n more -->
+            </div>
         </div>
-        <div class="链接组区">
-            <a href="#"></a>
-            <!-- 9-more -->
-        </div>
-        <div class="搜索区">
-            <input >
+        <div class="搜索框 右">
+            <input type="text">
             <button ></button>
         </div>
     </div>
-    <div class="行 首屏体">
-        <div class="列 左">
+    <div class="首屏体">
+        <div class="类目">
             <a href="#"></a>
-            <!--n-more -->
+            <!-- n more -->
         </div>
-        <div class="列 右">
+        <div class="轮播">
             <img>
-            <!--n-more -->
         </div>
     </div>
-    <div class="行 首屏脚">
-        <div class="列 左">
-            <div class="行*2">
-                <div class="列*3">
-                    <span class="图标"><img></span>
-                    <span class="文字">item</span>
-                </div>
-            </div>
-        </div>
-        <div class="列 右">
-            <div class="卡片组*3">
-                <span class="图片"><img></span>
-                <span class="图片"><img></span>
-                <span class="图片"><img></span>
-            </div>
-        </div>
+    <div class="首屏脚">
+        <div class="列 左"></div>
+        <div class="列 右"></div>
     </div>
 </div>
-<div class="行 主体">
-    <div class="行 主体头">
-        <div class="列 左">
-            <span>item</span>
-        </div>
-        <div class="列 右">
-            <span>item</span>
-            <span><img ></span>
-        </div>
-    </div>
-    <div class="行 主体体">
-        <div class="领队 左">
-            <img>
-        </div>
-        <div class="卡片组 右">
-            <div class="行 *2">
-                <div class="列*3">
-                    <span>图片</span>
-                    <span>文字</span>
-                    <span>描述</span>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="行 主体脚">
-        <div class="广告图片">
-            <img>
-        </div>
-    </div>
-    <div class="热评产品">
-        <div class="标题区"></div>
-        <div class="卡片区"></div>
-    </div>
-</div>
-<div class="行 页脚"></div>
+<div class="主体"></div>
+<div class="页脚"></div>
