--- a/practice/002-core-tag/mi.com.html
+++ b/practice/002-core-tag/mi.com.html
@@ -1,54 +1,133 @@
-<div class="导航 全局">
-    <div class="链接总组 左">
-        <a href="#"></a>
-        <!-- n more -->
-    </div>
-    <div class="链接总组 右">
-        <div class="链接组">
+<div class="行 导航">
+        <div class="行 链接组 左">
+            <span>喵，欢迎来天猫</span>
+            <a href="#">请登录</a>
+            <a href="#">免费注册</a>
+        </div>
+        <div class="行 链接组 右">
             <a href="#"></a>
-            <!-- n more -->
-        </div>
-        <div class="按钮区">
-            <button>
-                <a href="#"></a>
-            </button>
+            <!-- n-more -->
         </div>
     </div>
-</div>
-<div class="首屏">
-    <div class="首屏头">
-        <div class="链接组 左">
-            <div class="logo区">
-                <div class="logo">
-                    <img >
-                </div>
-                <div class="gif动图">
-                    <img >
-                </div>
+    <div class="行 首屏">
+        <div class="首屏头">
+            <div class="行 上">
+                <div class="logo"></div>
+                <div class="搜索框区"></div>
             </div>
-            <div class="链接区">
+            <div class="行 下">
                 <a href="#"></a>
                 <!-- n more -->
             </div>
         </div>
-        <div class="搜索框 右">
-            <input type="text">
-            <button ></button>
+        <div class="首屏体">
+            <div class="类目">
+                <a href="#"></a>
+                <!-- n more -->
+            </div>
+            <div class="轮播">
+                <img >
+            </div>
+        </div>
+        <div class="首屏脚">
+            <div class="行 上">
+                <div class="大卡片组">
+                    <img>
+                </div>
+            </div>
+            <div class="行 下">
+                <div class="行 *3">
+                    <div class="列 卡片组*7">
+                        <img>
+                    </div>
+                    <!-- 6 more -->
+                </div>
+                <!-- 2 more -->
+            </div>
         </div>
     </div>
-    <div class="首屏体">
-        <div class="类目">
-            <a href="#"></a>
-            <!-- n more -->
+    <div class="行 主体">
+        <div class="行 上">
+            <div class="链接组 左">
+                <img >
+            </div>
+            <div class="链接组 右">
+                <a href="#"></a>
+                <!-- n more -->
+            </div>
         </div>
-        <div class="轮播">
-            <img>
+        <div class="行 下">
+            <div class="领队">
+                <img >
+            </div>
+            <div class="缩略图">
+                <div class="图片"></div>
+                <div class="文字">
+                    <span class="标题"></span>
+                    <span class="描述"></span>
+                </div> 
+            </div>
+        </div>
+        <div class="行 卡片总组">
+            <div class="标题">
+                <span>猜你喜欢</span>
+            </div>
+            <div class="内容">
+                <div class="行*n">
+                    <div class="列*n">
+                            <div class="缩略图">
+                                    <div class="图片"></div>
+                                    <div class="文字">
+                                        <span class="标题"></span>
+                                        <span class="描述"></span>
+                                    </div> 
+                            </div>
+                    </div>
+                    <!-- n more -->
+                </div>
+                <!-- n more -->
+            </div>
         </div>
     </div>
-    <div class="首屏脚">
-        <div class="列 左"></div>
-        <div class="列 右"></div>
-    </div>
-</div>
-<div class="主体"></div>
-<div class="页脚"></div>
+    <div class="行 页脚">
+        <div class="页脚头">
+            <span><img ></span>
+            <span><img ></span>
+            <span><img ></span>
+        </div>
+        <div class="页脚体">
+            <div class="列 左">
+                <div class="列">
+                    <div class="标题"></div>
+                    <div class="链接">
+                        <a href="#"></a>
+                        <!-- n more -->
+                    </div>
+                </div>
+                <!-- n more -->
+            </div>
+            <div class="列 右">
+                <span class="二维码"></span>
+            </div>
+        </div>
+        <div class="页脚脚">
+            <div class="行 上">
+                <a href="#"></a>
+                <!-- n more -->
+            </div>
+            <div class="行 中">
+                <a href="#"></a>
+                <!-- n more -->
+            </div>
+            <div class="行 下">
+                <div class="行 上">
+                    <a href="#"></a>
+                    <!-- n more -->
+                </div>
+                <div class="行 下">
+                    <img >
+                    <img >
+                </div>
+            </div>
+        </div>
+    </div>    
