重新写了天猫html结构,上一次传错了

--- a/practice/002-core-tag/tamll.com.html
+++ b/practice/002-core-tag/tamll.com.html
@@ -1,148 +1,133 @@
 <div class="行 导航">
-    <div class="链接组 左">
-        <span>喵，欢迎来天猫</span>
-        <div class="链接">
-            <a href="#"></a>
-            <a href="#"></a>
-            <a href="#"></a>
+        <div class="行 链接组 左">
+            <span>喵，欢迎来天猫</span>
+            <a href="#">请登录</a>
+            <a href="#">免费注册</a>
         </div>
-    </div>
-    <div class="链接组 右">
-        <a href="#"></a>
-        <!-- n-more -->
-    </div>
-</div>
-<div class="行 首屏">
-    <div class="首屏头">
-        <div class="行 上">
-            <div class="logo区">
-                <img >
-            </div>
-            <div class="搜索框区 ">
-                <div class="搜索框">
-                    <input>
-                    <button></button>
-                </div>
-                <div class="链接组">
-                    <a href="#"></a>
-                    <!-- n-more -->
-                </div>
-            </div>
-            <div class="空白待用"></div>
-        </div>
-        <div class="行 下">
-            <div class="">
-                <img >
-            </div>
-            <div class="链接组">
-                <a href="#"></a>
-                <!-- n-more -->
-            </div>
-        </div>
-    </div>
-    <div class="首屏体">
-        <div class="类目">
-            <a href=""></a>
+        <div class="行 链接组 右">
+            <a href="#"></a>
             <!-- n-more -->
         </div>
-        <div class="轮播图">
-            <img>
-        </div>
     </div>
-    <div class="首屏脚">
-        <div class="行 上">
-            <div class="卡片组">
-                <div class="标题">
-                    <div class="">品牌闪购</div>
-                    <div class=""><button></button></div>
-                </div>
-                <div class="图片"><img></div>
-                <!-- 2-more -->
+    <div class="行 首屏">
+        <div class="首屏头">
+            <div class="行 上">
+                <div class="logo"></div>
+                <div class="搜索框区"></div>
+            </div>
+            <div class="行 下">
+                <a href="#"></a>
+                <!-- n more -->
             </div>
         </div>
-        <div class="行 下">
-            <div class="行 *3">
-                <div class="列*n">
+        <div class="首屏体">
+            <div class="类目">
+                <a href="#"></a>
+                <!-- n more -->
+            </div>
+            <div class="轮播">
+                <img >
+            </div>
+        </div>
+        <div class="首屏脚">
+            <div class="行 上">
+                <div class="大卡片组">
                     <img>
                 </div>
-                <!-- n-more -->
+            </div>
+            <div class="行 下">
+                <div class="行 *3">
+                    <div class="列 卡片组*7">
+                        <img>
+                    </div>
+                    <!-- 6 more -->
+                </div>
+                <!-- 2 more -->
             </div>
         </div>
     </div>
-</div>
-<div class="行 主体">
-    <div class="主体头">
-        <div class="列 左">
-            <img>
+    <div class="行 主体">
+        <div class="行 上">
+            <div class="链接组 左">
+                <img >
+            </div>
+            <div class="链接组 右">
+                <a href="#"></a>
+                <!-- n more -->
+            </div>
         </div>
-        <div class="列 右">
-            <a href="#"></a>
-            <!-- 7-more -->
+        <div class="行 下">
+            <div class="领队">
+                <img >
+            </div>
+            <div class="缩略图">
+                <div class="图片"></div>
+                <div class="文字">
+                    <span class="标题"></span>
+                    <span class="描述"></span>
+                </div> 
+            </div>
+        </div>
+        <div class="行 卡片总组">
+            <div class="标题">
+                <span>猜你喜欢</span>
+            </div>
+            <div class="内容">
+                <div class="行*n">
+                    <div class="列*n">
+                            <div class="缩略图">
+                                    <div class="图片"></div>
+                                    <div class="文字">
+                                        <span class="标题"></span>
+                                        <span class="描述"></span>
+                                    </div> 
+                            </div>
+                    </div>
+                    <!-- n more -->
+                </div>
+                <!-- n more -->
+            </div>
         </div>
     </div>
-    <div class="主体体">
-        <div class="领队 左"><img></div>
-        <div class="内容 右">
-            <div class="行 *2">
-                <div class="列 *4">
-                    <div class="缩略图"><img></div>
-                    <div class="标题">第六感 冰火六合一27只避孕套 超薄螺纹颗</div>
-                    <div class="价格">￥39.9</div>
+    <div class="行 页脚">
+        <div class="页脚头">
+            <span><img ></span>
+            <span><img ></span>
+            <span><img ></span>
+        </div>
+        <div class="页脚体">
+            <div class="列 左">
+                <div class="列">
+                    <div class="标题"></div>
+                    <div class="链接">
+                        <a href="#"></a>
+                        <!-- n more -->
+                    </div>
+                </div>
+                <!-- n more -->
+            </div>
+            <div class="列 右">
+                <span class="二维码"></span>
+            </div>
+        </div>
+        <div class="页脚脚">
+            <div class="行 上">
+                <a href="#"></a>
+                <!-- n more -->
+            </div>
+            <div class="行 中">
+                <a href="#"></a>
+                <!-- n more -->
+            </div>
+            <div class="行 下">
+                <div class="行 上">
+                    <a href="#"></a>
+                    <!-- n more -->
+                </div>
+                <div class="行 下">
+                    <img >
+                    <img >
                 </div>
             </div>
         </div>
-    </div>
-    <div class="猜你喜欢">
-        <div class="行 *n">
-            <div class="列 *5">
-                <div class="具体商品">
-                    <div class="缩略图"><img></div>
-                    <div class="标题">2017新款Apple/苹果iPad 9.7英寸苹果平</div>
-                    <div class="价格">¥ 2388 .0</div>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
-<div class="行 页脚">
-    <div class="页脚 头">
-        <div class="售后">
-            <div class=""><a href=""<img src="" alt=""></a></div>
-            <!-- 3-more -->
-        </div>
-    </div>
-    <div class="页脚 体">
-        <div class="其他售后">
-            <div class="链接总组">
-                <div class="标题">购物指南</div>
-                <div class="具体链接组">
-                    <a href="">免费注册</a>
-                    <a href="">免费注册</a>
-                    <a href="">免费注册</a>
-                </div>
-            </div>
-            <!-- 3-more -->
-        </div>
-        <div class="手机天猫">
-            <img>
-        </div>
-    </div>
-    <div class="页脚 脚">
-        <div class="第一行">
-            <a href="">关于天猫</a>
-            <!-- n-more -->
-        </div>
-        <div class="第二行">
-            <a href="">阿里巴巴集团</a>
-            <!-- n-more -->
-        </div>
-        <div class="第三行">
-            <a href="">增值电信业务经营许可证</a>
-            <!-- n-more -->
-        </div>
-        <div class="第四行">
-            <img src="" alt="">
-            <img src="" alt="">
-        </div>
-    </div>
-</div>
+    </div>    
