--- a/practice/002-core-tag/mi.com.html
+++ b/practice/002-core-tag/mi.com.html
@@ -1,133 +1,84 @@
-<div class="行 导航">
-        <div class="行 链接组 左">
-            <span>喵，欢迎来天猫</span>
-            <a href="#">请登录</a>
-            <a href="#">免费注册</a>
+<div class="row nav global 行  导航 全局">
+        <div class="row link-group left 行 链接组 左">
+            <a href=""></a>
+            <!-- 5 more -->
         </div>
-        <div class="行 链接组 右">
-            <a href="#"></a>
-            <!-- n-more -->
-        </div>
+        <div class="row right行 右">
+            <a href=""></a>
+            <!-- 2 more -->
+            <div class="col shop-car列 购物车">
+                <img src="" alt="">
+                <span>购物车</span>
+            </div>
     </div>
-    <div class="行 首屏">
-        <div class="首屏头">
-            <div class="行 上">
-                <div class="logo"></div>
-                <div class="搜索框区"></div>
-            </div>
-            <div class="行 下">
-                <a href="#"></a>
-                <!-- n more -->
-            </div>
-        </div>
-        <div class="首屏体">
-            <div class="类目">
-                <a href="#"></a>
-                <!-- n more -->
-            </div>
-            <div class="轮播">
-                <img >
-            </div>
-        </div>
-        <div class="首屏脚">
-            <div class="行 上">
-                <div class="大卡片组">
-                    <img>
-                </div>
-            </div>
-            <div class="行 下">
-                <div class="行 *3">
-                    <div class="列 卡片组*7">
-                        <img>
-                    </div>
+    <div class="row first-screen 行 首屏">
+        <div class="row page-nav 行 页面导航">
+            <div class="col logo left 列 logo 左">
+                <img src="" alt="">
+                <img src="" alt="">
+                <div class="page link-group">
+                    <a href=""></a>
                     <!-- 6 more -->
                 </div>
+            </div>
+            <div class="col right列 右">
+                <div class="">
+                    <input type="text">
+                    <button disabled="disabled">搜索按钮</button>
+                </div>
+            </div>
+        </div>
+        <div class="row main-promotion 行 主促销">
+            <div class="col 列 左">
+                <a href=""></a>
+                <!-- n more -->
+            </div>
+            <div class="col slider 列 轮播图">
+                <img src="" alt="">
+                <img src="" alt="">
+            </div>   
+        </div>
+        <div class="row cat-promotion 行 分类促销">
+            <div class="col left 列 左">
+                <div class="row 行 * 3"></div>
+                <div class="row 行 * 3"></div>
+            </div>
+            <div class="col card-group 列 卡片组">
+                <img src="" alt="">
                 <!-- 2 more -->
             </div>
         </div>
     </div>
-    <div class="行 主体">
-        <div class="行 上">
-            <div class="链接组 左">
-                <img >
-            </div>
-            <div class="链接组 右">
-                <a href="#"></a>
-                <!-- n more -->
-            </div>
-        </div>
-        <div class="行 下">
-            <div class="领队">
-                <img >
-            </div>
-            <div class="缩略图">
-                <div class="图片"></div>
-                <div class="文字">
-                    <span class="标题"></span>
-                    <span class="描述"></span>
-                </div> 
-            </div>
-        </div>
-        <div class="行 卡片总组">
-            <div class="标题">
-                <span>猜你喜欢</span>
-            </div>
-            <div class="内容">
-                <div class="行*n">
-                    <div class="列*n">
-                            <div class="缩略图">
-                                    <div class="图片"></div>
-                                    <div class="文字">
-                                        <span class="标题"></span>
-                                        <span class="描述"></span>
-                                    </div> 
-                            </div>
-                    </div>
-                    <!-- n more -->
+    <div class="row main行  主体">
+        <div class="row product first-line行 商品类 首行">
+            <div class="row name 行 名称">
+                <div class="col left 列  左">
+                    <span>标题</span>
                 </div>
-                <!-- n more -->
+                <div class="col right 列 右">
+                    <span>查看全部</span>
+                    <button disabled="disabled"></button>
+                </div>
+            </div>
+        </div>
+        <div class="row product-card 行 商品卡片组">
+            <div class="col leader 列 领队">
+                <img src="" alt="">
+            </div>
+            <div class="col product-card 列 商品卡片">
+                <div class="row 行 1">
+                    <img src="" alt="">
+                    <!-- 3 more -->
+                </div>
+                div class="row 行 2">
+                    <img src="" alt="">
+                    <!-- 3 more -->
+                </div>
             </div>
         </div>
     </div>
-    <div class="行 页脚">
-        <div class="页脚头">
-            <span><img ></span>
-            <span><img ></span>
-            <span><img ></span>
-        </div>
-        <div class="页脚体">
-            <div class="列 左">
-                <div class="列">
-                    <div class="标题"></div>
-                    <div class="链接">
-                        <a href="#"></a>
-                        <!-- n more -->
-                    </div>
-                </div>
-                <!-- n more -->
-            </div>
-            <div class="列 右">
-                <span class="二维码"></span>
-            </div>
-        </div>
-        <div class="页脚脚">
-            <div class="行 上">
-                <a href="#"></a>
-                <!-- n more -->
-            </div>
-            <div class="行 中">
-                <a href="#"></a>
-                <!-- n more -->
-            </div>
-            <div class="行 下">
-                <div class="行 上">
-                    <a href="#"></a>
-                    <!-- n more -->
-                </div>
-                <div class="行 下">
-                    <img >
-                    <img >
-                </div>
-            </div>
-        </div>
-    </div>    
+    <div class="row footer 行  页脚">
+        <div class="row support 行 售后服务"></div>
+        <div class="row other 行 其他"></div>
+        <div class="row meta 行 元信息"></div>
+    </div>
