add tmall English-html

--- a/practice/002-core-tag/tamll.com.html
+++ b/practice/002-core-tag/tamll.com.html
@@ -1,43 +1,43 @@
-<div class="行 导航">
-        <div class="行 链接组 左">
+<div class="row navigation 行 导航">
+        <div class=" row link-group left 行 链接组 左">
             <span>喵，欢迎来天猫</span>
             <a href="#">请登录</a>
             <a href="#">免费注册</a>
         </div>
-        <div class="行 链接组 右">
+        <div class=" row link-group right 行 链接组 右">
             <a href="#"></a>
             <!-- n-more -->
         </div>
     </div>
-    <div class="行 首屏">
-        <div class="首屏头">
-            <div class="行 上">
+    <div class=" row first-screen行 首屏">
+        <div class="first-screen-header 首屏头">
+            <div class="row  top 行 上">
                 <div class="logo"></div>
-                <div class="搜索框区"></div>
+                <div class="search-box-area 搜索框区"></div>
             </div>
-            <div class="行 下">
+            <div class=" row bottom 行 下">
                 <a href="#"></a>
                 <!-- n more -->
             </div>
         </div>
-        <div class="首屏体">
-            <div class="类目">
+        <div class=" first-screen-body 首屏体">
+            <div class="category 类目">
                 <a href="#"></a>
                 <!-- n more -->
             </div>
-            <div class="轮播">
+            <div class="slider 轮播">
                 <img >
             </div>
         </div>
-        <div class="首屏脚">
-            <div class="行 上">
-                <div class="大卡片组">
+        <div class="first-screen-footer 首屏脚">
+            <div class="row top 行 上">
+                <div class=" large-card-group 大卡片组">
                     <img>
                 </div>
             </div>
-            <div class="行 下">
-                <div class="行 *3">
-                    <div class="列 卡片组*7">
+            <div class="row bottom行 下">
+                <div class=" row 行 *3">
+                    <div class=" col card-group 列 卡片组*7">
                         <img>
                     </div>
                     <!-- 6 more -->
@@ -46,40 +46,40 @@
             </div>
         </div>
     </div>
-    <div class="行 主体">
-        <div class="行 上">
-            <div class="链接组 左">
+    <div class="row main 行 主体">
+        <div class=" row top 行 上">
+            <div class="link-group left链接组 左">
                 <img >
             </div>
-            <div class="链接组 右">
+            <div class="link-group right链接组 右">
                 <a href="#"></a>
                 <!-- n more -->
             </div>
         </div>
-        <div class="行 下">
-            <div class="领队">
+        <div class="row bottom 行 下">
+            <div class="leader 领队">
                 <img >
             </div>
-            <div class="缩略图">
-                <div class="图片"></div>
-                <div class="文字">
-                    <span class="标题"></span>
-                    <span class="描述"></span>
+            <div class=" thumbnail 缩略图">
+                <div class="picture 图片"></div>
+                <div class="text 文字">
+                    <span class="theme 标题"></span>
+                    <span class="description 描述"></span>
                 </div> 
             </div>
         </div>
-        <div class="行 卡片总组">
-            <div class="标题">
+        <div class="row card-group-master 行 卡片总组">
+            <div class="theme 标题">
                 <span>猜你喜欢</span>
             </div>
-            <div class="内容">
-                <div class="行*n">
-                    <div class="列*n">
-                            <div class="缩略图">
-                                    <div class="图片"></div>
-                                    <div class="文字">
-                                        <span class="标题"></span>
-                                        <span class="描述"></span>
+            <div class="content 内容">
+                <div class="row 行*n">
+                    <div class="col 列*n">
+                            <div class="thumbnail 缩略图">
+                                    <div class="picture 图片"></div>
+                                    <div class="text 文字">
+                                        <span class="theme 标题"></span>
+                                        <span class="description 描述"></span>
                                     </div> 
                             </div>
                     </div>
@@ -89,42 +89,42 @@
             </div>
         </div>
     </div>
-    <div class="行 页脚">
-        <div class="页脚头">
+    <div class=" row footer 行 页脚">
+        <div class=" footer-header 页脚头">
             <span><img ></span>
             <span><img ></span>
             <span><img ></span>
         </div>
-        <div class="页脚体">
-            <div class="列 左">
-                <div class="列">
-                    <div class="标题"></div>
-                    <div class="链接">
+        <div class="footer-body 页脚体">
+            <div class="col left列 左">
+                <div class="col 列">
+                    <div class="theme 标题"></div>
+                    <div class=" link 链接">
                         <a href="#"></a>
                         <!-- n more -->
                     </div>
                 </div>
                 <!-- n more -->
             </div>
-            <div class="列 右">
-                <span class="二维码"></span>
+            <div class=" col right 列 右">
+                <span class=" qrcode 二维码"></span>
             </div>
         </div>
-        <div class="页脚脚">
-            <div class="行 上">
+        <div class="footer-footer 页脚脚">
+            <div class="row top 行 上">
                 <a href="#"></a>
                 <!-- n more -->
             </div>
-            <div class="行 中">
+            <div class="row middle 行 中">
                 <a href="#"></a>
                 <!-- n more -->
             </div>
-            <div class="行 下">
-                <div class="行 上">
+            <div class="row bottom 行 下">
+                <div class="row top 行 上">
                     <a href="#"></a>
                     <!-- n more -->
                 </div>
-                <div class="行 下">
+                <div class="row bottom 行 下">
                     <img >
                     <img >
                 </div>
