--- a/practice/002-core-tag/zhihu.com.html
+++ b/practice/002-core-tag/zhihu.com.html
@@ -1,108 +1,88 @@
-<div class="行 导航 全局">
-    <div class="logo区">、
-        <img src="" alt="">
-        <a href=""></a>
-        <a href=""></a>
-        <a href=""></a>
-    </div>
-    <div class="搜索框区">
-        <input>
-        <button></button>
-    </div>
-    <div class="用户区">
-       <span><img src="" alt=""></span>
-       <span><img src="" alt=""></span>
-       <span><img src="" alt=""></span>
-    </div>
-</div>
-<div class="行 主体">
-    <div class="列 左">
-        <div class="行 导航 主页">
-            <div class="链接组 左">
-                <div class="">
-                    <button disabled="disabled"></button>
-                    <a href=""></a>
-                </div>
-                <div class="">
-                    <button disabled="disabled"></button>
-                    <a href=""></a>
-                </div>
-                <div class="">
-                    <button disabled="disabled"></button>
-                    <a href=""></a>
-                </div>
-                <div class="">
-                    <button disabled="disabled"></button>
-                    <a href=""></a>
-                </div>
+<div class=" row navigation 行 导航">
+        <div class="row left列 左">
+            <div class="logo-arealogo区">
+                <a href="#"></a>
+                <!-- n more -->
             </div>
-            <div class="链接组 右">
-                <a href="">草稿</a>
+            <div class="search-area 搜索区">
+                <input type="text">
+                <button></button>
             </div>
         </div>
-        <div class="主要内容">
-            <div class="">
-                <div>
-                    来自话题: 电影
-                </div>
-                <div><img src="" alt=""></div>
-            </div>
-            <div class="">
-                <a href="">渐冻人症是什么样的？</a>
-            </div>
-            <div class="">
-                <div><img src="" alt=""></div>
-                <div>有人提到了快视频，其实我觉得那并不算抄……那tm叫偷！
-                </div>
-            </div>
-            <div class="">
-                <div><button disabled="disabled"></button></div>
-                <div>​<a href="">47评论</a></div>
-                <div><a href="">分享</a>/div>
-                <div><a href="">收藏</a></div>
-                <div><a href="">​感谢</a></div>
-                <div><button disabled="disabled"><img src="" alt=""></button></div>
-            </div>
+        <div class="col right 列 右">
+            <button></button>
+            <button></button>
+            <img >
         </div>
     </div>
-    <div class="列 右">
-        <div class="上">
-            <div class="上三个">
-                <div class="缩略图">
-                    <div>
-                        <img src="" alt="">
+    <div class="row main 行 主体">
+        <div class="col left列 左">
+            <div class="row top行 上">
+                <div class="col left列 左">
+                    <a href="#"></a>
+                    <!-- n more -->
+                </div>
+                <div class="col right 列 右">
+                    <a href="#"></a>
+                </div>
+            </div>
+            <div class="row bottom 行 下">
+                <div class="row top 行 上">
+                    <a href="#"></a>
+                </div>
+                <div class="row top-middle 行 上中">
+                    <img >
+                    <a href="#"></a>
+                </div>
+                <div class="row middle 行 中">
+                    <a href="#"></a>
+                </div>
+                <div class="row middle-bottom 行 中下">
+                    <p></p>
+                    <span></span>
+                </div>
+                <div class="row bottom 行 下">
+                    <button></button>
+                    <button></button>
+                    <a href="#"></a>
+                    <a href="#"></a>
+                    <a href="#"></a>
+                </div>
+            </div>
+        </div>
+        <div class="col right列 右">
+            <div class="row top行 上">
+                <div class="row top 行 上">
+                    <button></button>
+                    <button></button>
+                    <button></button>
+                </div>
+                <div class="row bottom 行 下">
+                    <button></button>
+                    <button></button>
+                </div>
+            </div>
+            <div class="row middle 行 中">
+                <div class="row 行 *7">
+                    <button></button>
+                    <a href="#"></a>
+                </div>
+                <!-- n more -->
+            </div>
+            <div class="row bottom 行 下">
+                <div class="row top 行 上">
+                    <div class="刘看山">
+                        <a href="#"></a>
+                        <!-- n more -->
                     </div>
-                    <div>live</div>
-                    <!-- 2-more -->
+                    <div class="institute-account机构号"></div>
                 </div>
-            </div>
-            <div class="下两个"></div>
-        </div>
-        <div class="中">
-            <div class="行 *7">
-                <div class="">
-                    <div class="图标"></div>
-                    <div class="文字">我的收藏</div>
-                </div>
-                <!-- 6-more -->
-            </div>
-        </div>
-        <div class="下">
-            <div class="行">
-                <div>
-                    <a href="">刘看山</a>
-                </div>
-            </div>
-            <div class="行">
-                <div>
-                    侵权举报
-                </div>
-            </div>
-            <div class="行">
-                <div>
-                    儿童色情信息举报专区 
-                </div>
+                <div class="row bottom行 下">
+                    <div class="report-infomation举报信息">
+                        <a href="#"></a>
+                        <!-- n more -->
+                    </div>
+                </div>  
             </div>
         </div>
     </div>
-</div>
