--- a/practice/002-core-tag/test.com.html
+++ b/practice/002-core-tag/test.com.html
@@ -1,133 +1,88 @@
-<div class="行 导航">
-    <div class="行 链接组 左">
-        <span>喵，欢迎来天猫</span>
-        <a href="#">请登录</a>
-        <a href="#">免费注册</a>
+<div class=" row navigation 行 导航">
+    <div class="row left列 左">
+        <div class="logo-arealogo区">
+            <a href="#"></a>
+            <!-- n more -->
+        </div>
+        <div class="search-area 搜索区">
+            <input type="text">
+            <button></button>
+        </div>
     </div>
-    <div class="行 链接组 右">
-        <a href="#"></a>
-        <!-- n-more -->
+    <div class="col right 列 右">
+        <button></button>
+        <button></button>
+        <img >
     </div>
 </div>
-<div class="行 首屏">
-    <div class="首屏头">
-        <div class="行 上">
-            <div class="logo"></div>
-            <div class="搜索框区"></div>
-        </div>
-        <div class="行 下">
-            <a href="#"></a>
-            <!-- n more -->
-        </div>
-    </div>
-    <div class="首屏体">
-        <div class="类目">
-            <a href="#"></a>
-            <!-- n more -->
-        </div>
-        <div class="轮播">
-            <img >
-        </div>
-    </div>
-    <div class="首屏脚">
-        <div class="行 上">
-            <div class="大卡片组">
-                <img>
-            </div>
-        </div>
-        <div class="行 下">
-            <div class="行 *3">
-                <div class="列 卡片组*7">
-                    <img>
-                </div>
-                <!-- 6 more -->
-            </div>
-            <!-- 2 more -->
-        </div>
-    </div>
-</div>
-<div class="行 主体">
-    <div class="行 上">
-        <div class="链接组 左">
-            <img >
-        </div>
-        <div class="链接组 右">
-            <a href="#"></a>
-            <!-- n more -->
-        </div>
-    </div>
-    <div class="行 下">
-        <div class="领队">
-            <img >
-        </div>
-        <div class="缩略图">
-            <div class="图片"></div>
-            <div class="文字">
-                <span class="标题"></span>
-                <span class="描述"></span>
-            </div> 
-        </div>
-    </div>
-    <div class="行 卡片总组">
-        <div class="标题">
-            <span>猜你喜欢</span>
-        </div>
-        <div class="内容">
-            <div class="行*n">
-                <div class="列*n">
-                        <div class="缩略图">
-                                <div class="图片"></div>
-                                <div class="文字">
-                                    <span class="标题"></span>
-                                    <span class="描述"></span>
-                                </div> 
-                        </div>
-                </div>
-                <!-- n more -->
-            </div>
-            <!-- n more -->
-        </div>
-    </div>
-</div>
-<div class="行 页脚">
-    <div class="页脚头">
-        <span><img ></span>
-        <span><img ></span>
-        <span><img ></span>
-    </div>
-    <div class="页脚体">
-        <div class="列 左">
-            <div class="列">
-                <div class="标题"></div>
-                <div class="链接">
-                    <a href="#"></a>
-                    <!-- n more -->
-                </div>
-            </div>
-            <!-- n more -->
-        </div>
-        <div class="列 右">
-            <span class="二维码"></span>
-        </div>
-    </div>
-    <div class="页脚脚">
-        <div class="行 上">
-            <a href="#"></a>
-            <!-- n more -->
-        </div>
-        <div class="行 中">
-            <a href="#"></a>
-            <!-- n more -->
-        </div>
-        <div class="行 下">
-            <div class="行 上">
+<div class="row main 行 主体">
+    <div class="col left列 左">
+        <div class="row top行 上">
+            <div class="col left列 左">
                 <a href="#"></a>
                 <!-- n more -->
             </div>
-            <div class="行 下">
-                <img >
-                <img >
+            <div class="col right 列 右">
+                <a href="#"></a>
             </div>
+        </div>
+        <div class="row bottom 行 下">
+            <div class="row top 行 上">
+                <a href="#"></a>
+            </div>
+            <div class="row top-middle 行 上中">
+                <img >
+                <a href="#"></a>
+            </div>
+            <div class="row middle 行 中">
+                <a href="#"></a>
+            </div>
+            <div class="row middle-bottom 行 中下">
+                <p></p>
+                <span></span>
+            </div>
+            <div class="row bottom 行 下">
+                <button></button>
+                <button></button>
+                <a href="#"></a>
+                <a href="#"></a>
+                <a href="#"></a>
+            </div>
+        </div>
+    </div>
+    <div class="col right列 右">
+        <div class="row top行 上">
+            <div class="row top 行 上">
+                <button></button>
+                <button></button>
+                <button></button>
+            </div>
+            <div class="row bottom 行 下">
+                <button></button>
+                <button></button>
+            </div>
+        </div>
+        <div class="row middle 行 中">
+            <div class="row 行 *7">
+                <button></button>
+                <a href="#"></a>
+            </div>
+            <!-- n more -->
+        </div>
+        <div class="row bottom 行 下">
+            <div class="row top 行 上">
+                <div class="刘看山">
+                    <a href="#"></a>
+                    <!-- n more -->
+                </div>
+                <div class="institute-account机构号"></div>
+            </div>
+            <div class="row bottom行 下">
+                <div class="report-infomation举报信息">
+                    <a href="#"></a>
+                    <!-- n more -->
+                </div>
+            </div>  
         </div>
     </div>
 </div>
