--- a/practice/002-core-tag/zhihu.com.html
+++ b/practice/002-core-tag/zhihu.com.html
@@ -16,9 +16,9 @@
         </div>
     </div>
     <div class="row main 行 主体">
-        <div class="col left列 左">
-            <div class="row top行 上">
-                <div class="col left列 左">
+        <div class="col left main-conten-area 列 左 主内容区">
+            <div class="row top function-area 行 上 功能区">
+                <div class="col left  列 左 ">
                     <a href="#"></a>
                     <!-- n more -->
                 </div>
@@ -26,7 +26,7 @@
                     <a href="#"></a>
                 </div>
             </div>
-            <div class="row bottom 行 下">
+            <div class="row bottom content-area 行 下 内容区">
                 <div class="row top 行 上">
                     <a href="#"></a>
                 </div>
@@ -50,8 +50,8 @@
                 </div>
             </div>
         </div>
-        <div class="col right列 右">
-            <div class="row top行 上">
+        <div class="col right sidebar 列 右 侧边区">
+            <div class="row top side function-area 行 上 侧边功能区">
                 <div class="row top 行 上">
                     <button></button>
                     <button></button>
@@ -62,14 +62,14 @@
                     <button></button>
                 </div>
             </div>
-            <div class="row middle 行 中">
+            <div class="row middle tool-bar 行 中 工具条">
                 <div class="row 行 *7">
                     <button></button>
                     <a href="#"></a>
                 </div>
                 <!-- n more -->
             </div>
-            <div class="row bottom 行 下">
+            <div class="row bottom enterprise-information 行 下 企业信息">
                 <div class="row top 行 上">
                     <div class="刘看山">
                         <a href="#"></a>
