--- a/practice/002-core-tag/test.com.html
+++ b/practice/002-core-tag/test.com.html
@@ -1,88 +1,109 @@
-<div class=" row navigation 行 导航">
-    <div class="row left列 左">
-        <div class="logo-arealogo区">
-            <a href="#"></a>
-            <!-- n more -->
-        </div>
-        <div class="search-area 搜索区">
-            <input type="text">
-            <button></button>
-        </div>
-    </div>
-    <div class="col right 列 右">
-        <button></button>
-        <button></button>
-        <img >
-    </div>
-</div>
-<div class="row main 行 主体">
-    <div class="col left列 左">
-        <div class="row top行 上">
-            <div class="col left列 左">
-                <a href="#"></a>
-                <!-- n more -->
-            </div>
-            <div class="col right 列 右">
-                <a href="#"></a>
-            </div>
-        </div>
-        <div class="row bottom 行 下">
-            <div class="row top 行 上">
-                <a href="#"></a>
-            </div>
-            <div class="row top-middle 行 上中">
-                <img >
-                <a href="#"></a>
-            </div>
-            <div class="row middle 行 中">
-                <a href="#"></a>
-            </div>
-            <div class="row middle-bottom 行 中下">
-                <p></p>
-                <span></span>
-            </div>
-            <div class="row bottom 行 下">
-                <button></button>
-                <button></button>
-                <a href="#"></a>
-                <a href="#"></a>
-                <a href="#"></a>
-            </div>
-        </div>
-    </div>
-    <div class="col right列 右">
-        <div class="row top行 上">
-            <div class="row top 行 上">
-                <button></button>
-                <button></button>
-                <button></button>
-            </div>
-            <div class="row bottom 行 下">
-                <button></button>
-                <button></button>
-            </div>
-        </div>
-        <div class="row middle 行 中">
-            <div class="row 行 *7">
-                <button></button>
-                <a href="#"></a>
-            </div>
-            <!-- n more -->
-        </div>
-        <div class="row bottom 行 下">
-            <div class="row top 行 上">
-                <div class="刘看山">
-                    <a href="#"></a>
-                    <!-- n more -->
-                </div>
-                <div class="institute-account机构号"></div>
-            </div>
-            <div class="row bottom行 下">
-                <div class="report-infomation举报信息">
-                    <a href="#"></a>
-                    <!-- n more -->
-                </div>
-            </div>  
-        </div>
-    </div>
-</div>
+<!-- <!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Document</title>
+</head>
+<body>
+    
+</body>
+</html>
+<html>
+    <head>  
+        <meta>
+        <title></title>
+    </head>
+    <body>
+        <div></div>
+    </body>
+</html>
+<main>yo</main>
+<div>yo</div>
+<nav>   </nav>
+<header></header>
+<section></section> -->
+<!-- <a href="www.baidu.com"><h1>1</h1></a>
+<h1><a href="www.baidu.com">2</a></h1> -->
+<!-- <img src="hahah" alt="图片丢了，联系QQ10086" title="shenme">
+<input type="color">
+<input type="date">
+<input type="text">
+<input type="password">
+<input type="text">
+<input type="datetime"> -->
+<input type="email">
+<input type="submit">
+<form >
+        <input type="email">
+        <input type="submit">
+</form>
+<form >
+    <input type="checkbox" name="1">1
+    <input type="checkbox" name="1">2
+    <input type="checkbox" name="1">3
+</form>
+<form >
+    <input type="checkbox">4
+    <input type="checkbox">5
+    <input type="checkbox">6
+</form>
+<input type="number">
+<input type="button" value="anniu ">
+<button>anniu</button>
+<input type="file">
+<input type="range" min="1" max="100">
+<input type="range" min="1" max="100" step="10">
+<input type="text" placeholder="sb">
+<form >
+    <input type="file">
+    <input name="user-name" value="lsd">
+    <input type="submit" value="提交">
+    <input type="reset" value="chongzhi">
+</form>
+<input type="text" placeholder="sb" autofocus>
+<input type="search">
+<textarea ></textarea>
+<textarea name="1" id="" cols="30" rows="10" autofocus placeholder="sb">whh</textarea>
+<select name="1" id="2">
+    <option >王花花</option>
+    <option selected>111</option>
+    <option >王花花</option><option >王花花</option>
+    <option >王花花</option>
+</select>
+炒菜
+<ol>
+    <li>买菜</li>
+    <li>切菜</li>
+    <li>炒菜</li>
+</ol>
+哈喽
+<ul>
+    <li>你好</li>
+    <li>不好</li>
+    <li>很好</li>
+</ul>
+<table>
+    <tr>
+        <td></td>
+    </tr>
+</table>
+<table border="1">
+    <thead>
+        <tr>
+            <th></th>
+            <th></th>
+        </tr>
+    </thead>
+    <tbody>
+        <tr>
+            <td></td>
+            <td></td>
+        </tr>
+        <tr>
+            <td></td>
+            <td></td>
+        </tr>
+    </tbody>
+</table>
