--- a/practice/002-core-tag/mi.com.html
+++ b/practice/002-core-tag/mi.com.html
@@ -1,84 +1,168 @@
-<div class="row nav global 行  导航 全局">
-        <div class="row link-group left 行 链接组 左">
-            <a href=""></a>
-            <!-- 5 more -->
+<div class="row navigation global block 行 导航 全局">
+        <div class="column left inline-block 列 左">
+          <a href="#">Item</a>
+          <!--4 more-->
         </div>
-        <div class="row right行 右">
-            <a href=""></a>
-            <!-- 2 more -->
-            <div class="col shop-car列 购物车">
-                <img src="" alt="">
-                <span>购物车</span>
-            </div>
-    </div>
-    <div class="row first-screen 行 首屏">
-        <div class="row page-nav 行 页面导航">
-            <div class="col logo left 列 logo 左">
-                <img src="" alt="">
-                <img src="" alt="">
-                <div class="page link-group">
-                    <a href=""></a>
-                    <!-- 6 more -->
-                </div>
-            </div>
-            <div class="col right列 右">
-                <div class="">
-                    <input type="text">
-                    <button disabled="disabled">搜索按钮</button>
-                </div>
-            </div>
+        <div class="column right inline-block 列 右">
+          <a href="#">Item</a>
+          <!--2 more-->
         </div>
-        <div class="row main-promotion 行 主促销">
-            <div class="col 列 左">
-                <a href=""></a>
-                <!-- n more -->
-            </div>
-            <div class="col slider 列 轮播图">
-                <img src="" alt="">
-                <img src="" alt="">
-            </div>   
+      </div>
+      <div class="row first-screen block 行 首屏">
+        <div class="row navigation page  block 行 导航 页面">
+          <div class="column logo inline-block 列 标志">
+            <img>
+          </div>
+          <div class="column link-group inline-block 列 链接组">
+            <a href="#">Item</a>
+            <!--2 more-->
+          </div>
+          <div class="column search  inline-block 列 搜索">
+            <input>
+            <button>搜索</button>
+          </div>
         </div>
-        <div class="row cat-promotion 行 分类促销">
-            <div class="col left 列 左">
-                <div class="row 行 * 3"></div>
-                <div class="row 行 * 3"></div>
+        <div class="row main-promotion block 行 主促销">
+          <div class="column category inline-block 列 类目">
+            <a href="#">Item</a>
+            <!--8 more-->
+          </div>
+          <div class="column slider-group inline-block 列 轮播组">
+            <div class="slider inline-block 轮播">
+              <img>
             </div>
-            <div class="col card-group 列 卡片组">
-                <img src="" alt="">
-                <!-- 2 more -->
-            </div>
+          </div>
         </div>
-    </div>
-    <div class="row main行  主体">
-        <div class="row product first-line行 商品类 首行">
-            <div class="row name 行 名称">
-                <div class="col left 列  左">
-                    <span>标题</span>
-                </div>
-                <div class="col right 列 右">
-                    <span>查看全部</span>
-                    <button disabled="disabled"></button>
-                </div>
+        <div class="row promotion-card-group block 行 促销卡片组">
+          <div class="column shortcut inline-block 列 快速通道">
+            <div class="row block行">
+              <div class="column inline-block 列">
+                <span class="icon  inline-block 图标">
+                  <img>
+                </span>
+                <span class="text  inline-block 文字">
+                  Item
+                </span>
+              </div>
+              <!--2 more-->
             </div>
+            <!--1 more-->
+          </div>
+          <div class="column card inline-block 列 卡片">
+            <img>
+          </div>
         </div>
-        <div class="row product-card 行 商品卡片组">
-            <div class="col leader 列 领队">
-                <img src="" alt="">
+      </div>
+      <div class="row main block行 主体">
+        <div class="category-promotion block 分类促销">
+          <div class="row title-area 行 标题区">
+            <div class="column left 列 左">
+              <span>手机</span>
             </div>
-            <div class="col product-card 列 商品卡片">
-                <div class="row 行 1">
-                    <img src="" alt="">
-                    <!-- 3 more -->
-                </div>
-                div class="row 行 2">
-                    <img src="" alt="">
-                    <!-- 3 more -->
-                </div>
+            <div class="column right 列 右">
+              <span>查看全部</span>
+              <!--<span>-->
+              <!--<span>查看全部</span>-->
+              <!--<span><img></span>-->
+              <!--</span>-->
             </div>
+          </div>
+          <div class="row card-group 行 卡片组">
+            <div class="column left leader 列 左 领队">
+              <img>
+            </div>
+            <div class="column right 列 右">
+              <div class="row 行">
+                <div class="column card 列 卡片">
+                  <div class="thumbnail 缩略图">
+                    <img>
+                  </div>
+                  <div class="text 文字">
+                    <div class="title 标题">骁龙835</div>
+                    <div class="description 描述">变焦双摄，4 轴防抖，骁龙835 处理器</div>
+                    <div class="price 价格">2299元</div>
+                  </div>
+                </div>
+                <!--3 more-->
+              </div>
+              <!--1 more-->
+            </div>
+          </div>
         </div>
-    </div>
-    <div class="row footer 行  页脚">
-        <div class="row support 行 售后服务"></div>
-        <div class="row other 行 其他"></div>
-        <div class="row meta 行 元信息"></div>
-    </div>
+        <div class="hot-comment-area 热评区">
+          <div class="column card 列 卡片">
+            <div class="thumbnail 缩略图">
+              <img>
+            </div>
+            <div class="text 文字">
+              <div class="row 行">
+                包装很让人感动，式样也很可爱，做出的饭全家人都爱吃，超爱五星！手机控制还是不太熟练，最主要是没有连接...
+              </div>
+              <div class="row 行">
+                <div class="user 用户">来自于 HZG 的评价</div>
+                <div class="product 产品">
+                  <div class="column name 列 名称">米家压力IH电饭煲</div>
+                  <div class="column price 列 价格">999元</div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="theme-area 主题区">
+          <div class="column 列 卡片">
+            <div class="text 文字">
+              <div class="theme-title 主题标题">图书</div>
+              <div class="title 标题">哈利·波特与被诅咒的孩子</div>
+              <div class="description 描述">“哈利·波特”第八个故事中文版震撼来袭！特别彩排版剧本！</div>
+              <div class="price 价格">30元</div>
+            </div>
+            <div class="thumbnail 缩略图">
+              <img>
+            </div>
+          </div>
+          <!--3 more-->
+        </div>
+      </div>
+      <div class="row footer 行 页脚">
+        <div class="row support 行 售后">
+          <div class="column support-item 列 售后项目">
+            <img> 预约维修服务
+          </div>
+          <!--3 more-->
+        </div>
+        <div class="row others 行 其他">
+          <div class="column link-group-master 列 总链接组">
+            <div class="column 列">
+              <div class="title 标题"></div>
+              <div class="link-group 链接组">
+                <a href="#">Item</a>
+              </div>
+              <!--3 more-->
+            </div>
+            <!--4 more-->
+          </div>
+          <div class="column open-time 列 营业信息">
+            <div class="service-phone 服务电话">400-1234-233</div>
+            <div class="service-time 服务时间">周一至周日 8:00-18:00 （仅收市话费）</div>
+            <div>
+              <button>
+                <img>
+                在线客服
+              </button>
+            </div>
+          </div>
+        </div>
+        <div class="row meta 行 元信息">
+          <div class="column left 列 左">
+            <div class="logo"><img></div>
+            <div class="link-group 链接组">
+              <a href="#">Item</a>
+              <!--n more-->
+            </div>
+          </div>
+          <div class="column certification 列 认证">
+            <a href="#"><img></a>
+            <!--3 more-->
+          </div>
+        </div>
+      </div>
