--- a/practice/004-row-col/lianjia.com.html
+++ b/practice/004-row-col/lianjia.com.html
@@ -67,8 +67,10 @@
         </div>
     </div>
     <div class="bottom-area">
-        <div><img  alt="">声明</div>
-        <div><img  alt="">保证书</div>
+        <div class="row">
+            <div class="col"><img  alt="">声明</div>
+            <div class="col"><img  alt="">保证书</div>
+        </div>
     </div>
 </header>
 <main class="container">
