--- a/practice/004-row-col/test.html
+++ b/practice/004-row-col/test.html
@@ -1,151 +1,32 @@
-    <header class="row first-screen">
-        <div class="top-area">
-            <div class="col logo-area left">
-                <div class="col logo"><img></div>
-                <div class="col location">北京</div>
-            </div>
-            <div class="col nav-area right">
-                <div class="user-center">
-                    <a href="#"><span class="avatar"></span></a>
-                    <a class="login" href="#">login</a>
-                    <a class="signup" href="#">sign up</a>
-                </div>
-                <nav>
-                    <ul>
-                        <li><a href="">各种房</a></li>
-                        <li><a href="">各种房</a></li>
-                        <li><a href="">各种房</a></li>
-                        <li><a href="">各种房</a></li>
-                        <!-- n more -->
-                    </ul>
-                </nav>
-            </div>
-        </div>
-        <div class="middle-area">
-            <h1 class="title">链接每个人的故事</h1>
-            <div class="sales-data"><span>真实租房xx套</span></div>
-            <div class="search-area">
-                <ul class="search-cat">
-                    <li><a href="#">二手房</a></li>
-                    <li><a href="#">新房</a></li>
-                    <li><a href="#">租房</a></li>
-                </ul>
-                <div class="search-bar">
-                    <input type="text" placeholder="请输入区域，商圈或小区名开始找房">
-                    <button>开始找房</button>
-                </div>
-            </div>
-        </div>
-        <div class="bottom-area">
-            <div class="col"><span class="declaration-icon"></span>声明</div>
-            <div class="col"><span class="warranty-icon"></span>保证书</div>
-        </div>
-    </header>
-    <main>
-        <div class="main-nav">
-            <ul class="card-group">
-                <li>
-                    <a href="#">
-                        <span class="thumb"><img></span>
-                        <h3>找二手房</h3>
-                        <span class="desc">真的是二手房</span>
-                    </a>
-                </li>
-                <!-- 3 more -->
-            </ul>
-        </div>
-        <div class="app-prom">
-            <div class="col">
-                <div class="title">
-                    一脸倾城
-                    <h2>为你为家</h2>
-                </div>
-                <div class="desc">
-                    集二手、新房、租房功能于一体，随时随地任性找房。IM匿名咨询让您放心，消息动态推送让您省心，服务承诺让您安心，数据百科锦囊让您感受贴心漫漫找房路，我们努力为您想更多
-                </div>
-                <div class="download">
-                    <div class="col left">
-                        <button class="iphone">iphone</button>
-                        <button class="android">android</button>
-                    </div>
-                    <div class="col qr-code right">
-                        <img>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="cat-prom">
-            <div class="header">
-                <div class="col left">
-                    <h3><span>二手好房</span>为你而选</h3>
-                    好房源啦么多，～～～
-                </div>
-                <div class="col right">
-                    <a href="#">更多xxx</a>
-                </div>
-            </div>
-            <div class="card-group">
-                <div class="col card">
-                    <div class="thumb"><img><span>520万</span></div>
-                    <div class="desc">
-                        <h4>xxx 精装修 500万</h4>
-                        <span>xxx 999平米</span>
-                    </div>
-                </div>
-                <!-- 3 more -->
-            </div>
-            <div class="source">
-                <div>xxx房源</div>
-                <div>xxx房源</div>
-                <div>xxx房源</div>
-                <div>xxx房源</div>
-            </div>
-        </div>
-        <!-- 2 more -->
-        <div class="inspection">
-            <div class="col left">
-                <h2>真是房源</h2>
-                不是嘴上说说
-            </div>
-            <div class="col right">
-                <div class="slogan">
-                    <span>
-                        真是存在，真是在售
-                    </span>
-                </div>
-                <div class="search-bar">
-                    <input type="text" placeholder="查询真伪">
-                    <button><span class="icon"></span></button>
-                </div>
-            </div>
-        </div>
-    </main>
-    <footer>
-        <div class="main-site-links">
-            <ul class="col link-group left">
-                <li><a href="#">了解我们</a></li>
-                <!-- n more -->
-            </ul>
-            <div class="col right">
-                <a href="#">客服</a>
-            </div>
-        </div>
-        <div class="other-links">
-            <div class="button-links">
-                <button>热门租房网</button>
-                <button>热门租房网</button>
-                <button>热门租房网</button>
-                <button>热门租房网</button>
-            </div>
-            <div class="link-group">
-                <ul>
-                    <li><a href="#">xxx</a></li>
-                    <!--n more-->
-                </ul>
-                <!-- 1 more -->
-            </div>
-        </div>
-        <div class="meta">
-            链家网（北京）科技有限公司
-        </div>
-    </footer>
+<style>
+    body {
+        margin: 0;
+    }
+    .row {
+        font-size: 0;
+    }
+    .col {
+        font-size: 15px;
+        display: inline-block;
+        vertical-align: top;
+    }
+    .sm {
+        width: 20%;
+        background: brown;
+    }
+    .md {
+        width: 30%;
+        background: blue;
+    }
+    .lg {
+        width: 50%;
+        background: aliceblue;
+    }
+</style>
+<div class="row"> 
+    <div class="col sm">yo</div>
+    <div class="col md">yo</div>
+    <div class="col lg">yo</div>
+    <div>123</div>
+    <button>123</button>
+</div>
