--- a/practice/005-mi.com-anatomy/nav/test.html
+++ b/practice/005-mi.com-anatomy/nav/test.html
@@ -1,93 +1,63 @@
 <style>
-    /*=========全局样式开始==========*/
-* {
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    box-sizing: border-box;
-}
-
-a {
-    text-decoration: none; /*清除链接的下划线*/
-}
-
-img {
-    max-width: 100%;
-}
-
-body {
-    margin: 0;
-    font-family: sans-serif, 'Microsoft YaHei'; /*字体族*/
-}
-
-.container {
-    max-width: 900px;
-    margin-left: auto;
-    margin-right: auto;
-}
-
-.row {
-    font-size: 0;
-}
-
-.col {
-    display: inline-block;
-    vertical-align: top;
-    font-size: 15px;
-}
-
-/*=========全局样式结束==========*/
-/*.col:nth-child(odd) {*/
-/*background: rgba(0, 0, 0, .2);*/
-/*}*/
-
-/*.col:nth-child(even) {*/
-/*background: rgba(0, 0, 0, .4);*/
-/*}*/
-
-.left, .right {
-    width: 50%;
-}
-
-.right {
-    text-align: right;
-}
-
-.nav {
-    background: rgba(0, 0, 0, .8);
-}
-
-/*
-更踏实的写法
-.nav .left > a,
-.nav .right > a
-*/
-.nav a {
-    display: inline-block;
-    padding: 10px 5px; /*内边距*/
-    color: #ccc; /*文字颜色*/
-    font-size: 80%;
-}
-
-.nav a:hover {
-    color: #fff;
-    background: rgba(0, 0, 0, .8);
-}
+    * {
+        box-sizing: content-box;
+    }
+    body {
+        margin: 0;
+    }
+    .container {
+      max-width: 1000px; /*最大宽度：600像素*/
+      margin-left: auto; /*左margin：自动*/
+      margin-right: auto; /*右margin：自动*/
+    }
+    .row {
+        font-size: 0;
+    }
+    .col {
+        font-size: 15px;
+        vertical-align: top;
+        display: inline-block;
+    }
+    .left, .right {
+        width: 50%;
+    }
+    .right {
+        text-align: right;
+    }
+    a {
+        text-decoration: none;
+        color: #b0b0b0;
+    }
+   .nav {
+        background: rgba(0, 0, 0, .8);
+    }
+    nav a{
+        display: inline-block;
+        padding: 10px 5px; /*内边距*/
+        color: #ccc; /*文字颜色*/
+        font-size: 80%;
+    }
+    .nav a:hover {
+        color: #fff;
+        background: rgba(0, 0, 0, .8);
+    }
 </style>
+<div class="row nav">
     <div class="container">
-      <div class="row nav">
         <div class="col left">
             <a href="#">小米商城</a>
             <a href="#">MIUI</a>
             <a href="#">IoT</a>
             <a href="#">云服务</a>
             <a href="#">水滴</a>
-            <a href="#">云服务</a>
-            <a href="#">IoT</a>
-          </div>
-          <div class="col right">
-            <a href="#">小米商城</a>
-            <a href="#">MIUI</a>
-            <a href="#">IoT</a>
-          </div>
-      </div>
+            <a href="#">金融</a>
+            <a href="#">有品</a>
+            <a href="#">Select Region</a>
+        </div>
+        <div class="col right">
+            <a href="#">登录</a>
+            <a href="#">注册</a>
+            <a href="#">消息通知</a>
+        </div>
     </div>
+</div>
