add 修补mi.com nav test

--- a/practice/005-mi.com-anatomy/nav/test.html
+++ b/practice/005-mi.com-anatomy/nav/test.html
@@ -1,6 +1,6 @@
 <style>
     * {
-        box-sizing: content-box;
+        box-sizing: border-box;
     }
     body {
         margin: 0;
@@ -26,12 +26,11 @@
     }
     a {
         text-decoration: none;
-        color: #b0b0b0;
     }
    .nav {
         background: rgba(0, 0, 0, .8);
     }
-    nav a{
+    .nav a{
         display: inline-block;
         padding: 10px 5px; /*内边距*/
         color: #ccc; /*文字颜色*/
