pictute1 homework add

--- a/practice/005-mi.com-anatomy/nav-with-delimiter/index.html
+++ b/practice/005-mi.com-anatomy/nav-with-delimiter/index.html
@@ -1,4 +1,4 @@
-<style>
+        <!-- <style>
         body {
           font-family: sans-serif;
         }
@@ -41,4 +41,20 @@
         <span class="nav-item">
           <a href="#">item</a>
         </span>
-      </div>
+      </div> -->
+<style>
+    .a a::after {
+        content: "|";
+    }
+    .a a {
+        background: tomato;
+    }
+    .a {
+        background: rgba(0, 0, 0, .1);
+    }
+</style>
+<div class="a">
+    <a href="#">item</a>
+    <a href="#">item</a>
+    <a href="#">item</a>
+</div>
