--- a/practice/005-mi.com-anatomy/nav/test1.html
+++ b/practice/005-mi.com-anatomy/nav/test1.html
@@ -23,7 +23,7 @@
     }
     .row.nav {
         background: #333333;
-        padding: 11.5px;
+        /* padding: 11.5px;有问题不能贯穿，可以给到a  padding */
     }
     .nav .left {
         width: 50%;
