add tmall nav-section

--- a/practice/012-tmall.com-grid-system/index.html
+++ b/practice/012-tmall.com-grid-system/index.html
@@ -31,12 +31,12 @@
         <div class="container">
         <div class="row nav-homepage">
             <div class="col-3 logo-area"></div>
-            <div class="col-6 search-area">
+            <div class="col-7 search-area">
                 <form>
-                    <input class="search" type="search">
+                    <input class="search" type="search" placeholder="搜索 天猫 商品/品牌/店铺">
                     <button class="submit">搜索</button>
                 </form>
-                <div>
+                <div class="cat">
                     <a href="#">针织衫</a>
                     <a href="#">针织衫</a>
                     <a href="#">针织衫</a>
@@ -48,9 +48,23 @@
                     <a href="#">针织衫</a>
                 </div>
             </div>
-            <div class="col-3 blank">3</div>
+            <div class="col-2 blank"></div>
         </div>
-        <div class="row top"></div>
+        <div class="row top">
+            <div class="col-2 fenlei"><i style="font-size:10px;" class="fas fa-anchor"></i> 商品分类</div>
+            <div class="col-8 tmallvip">
+                <span><i style="font-size:20px;" class="fas fa-anchor"></i></span>
+                <span><i style="font-size:20px;" class="fas fa-anchor"></i></span>
+                <a href="#">天猫会员</a>
+                <a href="#">电器城</a>
+                <a href="#">电器城</a>
+                <a href="#">电器城</a>
+                <a href="#">电器城</a>
+                <a href="#">电器城</a>
+                <a href="#">电器城</a>
+            </div>
+            <div class="col-2">3</div>
+        </div>
         <div class="row slider"></div>
         </div>
     </div>
