--- a/practice/012-tmall.com-grid-system/index.html
+++ b/practice/012-tmall.com-grid-system/index.html
@@ -63,9 +63,22 @@
                 <a href="#">电器城</a>
                 <a href="#">电器城</a>
             </div>
-            <div class="col-2">3</div>
+            <div class="col-2"></div>
         </div>
-        <div class="row slider"></div>
+        <div class="row slider">
+            <div class="col main-cat">
+                <a href="#">男装/运动户外</a>
+                <a href="#">男装/运动户外</a>
+                <a href="#">男装/运动户外</a>
+                <a href="#">男装/运动户外</a>
+                <a href="#">男装/运动户外</a>
+                <a href="#">男装/运动户外</a>
+                <a href="#">男装/运动户外</a>
+                <a href="#">男装/运动户外</a>
+                <a href="#">男装/运动户外</a>
+                <a href="#">男装/运动户外</a>
+            </div>
+        </div>
         </div>
     </div>
     <div class="main"></div>
